Fixes hikes behaviour on mobile devices

--- a/client/src/css/components/form.css
+++ b/client/src/css/components/form.css
@@ -57,7 +57,7 @@
 
 .form__group {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   gap: var(--spacing);
 }
 
